Fix white space at bottom of page

--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 :root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100vh;
-    padding: 0;
 }
 
 body {
     display: flex;
     margin: 0;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    bottom: 0%;
+    right: 0%;
 }
 
 #left-panel {
     flex: 7;
     text-align: center;
-/*     background-image: url("./img/background.jpg");
+    background-image: url("./img/background.jpg");
     background-size: cover;
-    background-repeat: no-repeat; */
-    height: 100vh;
+    background-repeat: no-repeat;
 }
 
 #banner {
@@ -46,7 +48,6 @@ span {
     justify-content: space-around;
     background-color: rgb(12, 12, 12);
     color: #cecece;
-    height: 100vh;
 }
 
 #description {
